--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -26,7 +26,7 @@
     <application
         android:icon="@mipmap/ic_launcher_settings"
         android:label="@string/device_settings_app_name"
-        android:theme="@style/Theme.Main"
+        android:theme="@style/Theme.Settings"
         android:defaultToDeviceProtectedStorage="true"
         android:directBootAware="true">
 
