oneplus-common: PocketMode: Rebrand to MoKee
Change-Id: I73e4a7f7522867be42967569eaa073e86996204d

--- a/pocketmode/AndroidManifest.xml
+++ b/pocketmode/AndroidManifest.xml
@@ -17,7 +17,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cyanogenmod.pocketmode"
+    package="org.mokee.pocketmode"
     android:sharedUserId="android.uid.system">
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
